; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_cvar.c_Cvar_Set2.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_cvar.c_Cvar_Set2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i8*, i32, double, i32*, i32, i32, i8*, i32* }

@.str = private unnamed_addr constant [30 x i8] c"invalid cvar name string: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"BADNAME\00", align 1
@CVAR_USER_CREATED = common dso_local global i32 0, align 4
@qtrue = common dso_local global i8* null, align 8
@CVAR_LATCH = common dso_local global i32 0, align 4
@cvar_modifiedFlags = common dso_local global i32 0, align 4
@CVAR_ROM = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [18 x i8] c"%s is read only.\0A\00", align 1
@CVAR_INIT = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [24 x i8] c"%s is write protected.\0A\00", align 1
@CVAR_CHEAT = common dso_local global i32 0, align 4
@cvar_cheats = common dso_local global %struct.TYPE_8__* null, align 8
@.str.4 = private unnamed_addr constant [24 x i8] c"%s is cheat protected.\0A\00", align 1
@.str.5 = private unnamed_addr constant [37 x i8] c"%s will be changed upon restarting.\0A\00", align 1
@FLT_MAX = common dso_local global double 0.000000e+00, align 8
@var_value = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_7__* @Cvar_Set2(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_7__*, align 8
  %9 = alloca double, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @Cvar_ValidateString(i8* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %3
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @Com_Printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i8* %14)
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8** %5, align 8
  br label %16

16:                                               ; preds = %13, %3
  %17 = load i8*, i8** %5, align 8
  %18 = call %struct.TYPE_7__* @Cvar_FindVar(i8* %17)
  store %struct.TYPE_7__* %18, %struct.TYPE_7__** %8, align 8
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %20 = icmp ne %struct.TYPE_7__* %19, null
  br i1 %20, label %37, label %21

21:                                               ; preds = %16
  %22 = load i8*, i8** %6, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %25, label %24

24:                                               ; preds = %21
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %4, align 8
  br label %257

25:                                               ; preds = %21
  %26 = load i32, i32* %7, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %33, label %28

28:                                               ; preds = %25
  %29 = load i8*, i8** %5, align 8
  %30 = load i8*, i8** %6, align 8
  %31 = load i32, i32* @CVAR_USER_CREATED, align 4
  %32 = call %struct.TYPE_7__* @Cvar_Get(i8* %29, i8* %30, i32 %31)
  store %struct.TYPE_7__* %32, %struct.TYPE_7__** %4, align 8
  br label %257

33:                                               ; preds = %25
  %34 = load i8*, i8** %5, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = call %struct.TYPE_7__* @Cvar_Get(i8* %34, i8* %35, i32 0)
  store %struct.TYPE_7__* %36, %struct.TYPE_7__** %4, align 8
  br label %257

37:                                               ; preds = %16
  %38 = load i8*, i8** %6, align 8
  %39 = icmp ne i8* %38, null
  br i1 %39, label %44, label %40

40:                                               ; preds = %37
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i32 0, i32 0
  %43 = load i8*, i8** %42, align 8
  store i8* %43, i8** %6, align 8
  br label %44

44:                                               ; preds = %40, %37
  %45 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %46 = load i8*, i8** %6, align 8
  %47 = load i8*, i8** @qtrue, align 8
  %48 = call i8* @Cvar_Validate(%struct.TYPE_7__* %45, i8* %46, i8* %47)
  store i8* %48, i8** %6, align 8
  %49 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %50 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %49, i32 0, i32 1
  %51 = load i32, i32* %50, align 8
  %52 = load i32, i32* @CVAR_LATCH, align 4
  %53 = and i32 %51, %52
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %55, label %85

55:                                               ; preds = %44
  %56 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %57 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %56, i32 0, i32 7
  %58 = load i32*, i32** %57, align 8
  %59 = icmp ne i32* %58, null
  br i1 %59, label %60, label %85

60:                                               ; preds = %55
  %61 = load i8*, i8** %6, align 8
  %62 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %63 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %62, i32 0, i32 3
  %64 = load i32*, i32** %63, align 8
  %65 = call i64 @strcmp(i8* %61, i32* %64)
  %66 = icmp ne i64 %65, 0
  br i1 %66, label %75, label %67

67:                                               ; preds = %60
  %68 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %69 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %68, i32 0, i32 7
  %70 = load i32*, i32** %69, align 8
  %71 = call i32 @Z_Free(i32* %70)
  %72 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %73 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %72, i32 0, i32 7
  store i32* null, i32** %73, align 8
  %74 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  store %struct.TYPE_7__* %74, %struct.TYPE_7__** %4, align 8
  br label %257

75:                                               ; preds = %60
  %76 = load i8*, i8** %6, align 8
  %77 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %78 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %77, i32 0, i32 7
  %79 = load i32*, i32** %78, align 8
  %80 = call i64 @strcmp(i8* %76, i32* %79)
  %81 = icmp ne i64 %80, 0
  br i1 %81, label %84, label %82

82:                                               ; preds = %75
  %83 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  store %struct.TYPE_7__* %83, %struct.TYPE_7__** %4, align 8
  br label %257

84:                                               ; preds = %75
  br label %95

85:                                               ; preds = %55, %44
  %86 = load i8*, i8** %6, align 8
  %87 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %88 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %87, i32 0, i32 3
  %89 = load i32*, i32** %88, align 8
  %90 = call i64 @strcmp(i8* %86, i32* %89)
  %91 = icmp ne i64 %90, 0
  br i1 %91, label %94, label %92

92:                                               ; preds = %85
  %93 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  store %struct.TYPE_7__* %93, %struct.TYPE_7__** %4, align 8
  br label %257

94:                                               ; preds = %85
  br label %95

95:                                               ; preds = %94, %84
  %96 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %97 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %96, i32 0, i32 1
  %98 = load i32, i32* %97, align 8
  %99 = load i32, i32* @cvar_modifiedFlags, align 4
  %100 = or i32 %99, %98
  store i32 %100, i32* @cvar_modifiedFlags, align 4
  %101 = load i32, i32* %7, align 4
  %102 = icmp ne i32 %101, 0
  br i1 %102, label %194, label %103

103:                                              ; preds = %95
  %104 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %105 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %104, i32 0, i32 1
  %106 = load i32, i32* %105, align 8
  %107 = load i32, i32* @CVAR_ROM, align 4
  %108 = and i32 %106, %107
  %109 = icmp ne i32 %108, 0
  br i1 %109, label %110, label %114

110:                                              ; preds = %103
  %111 = load i8*, i8** %5, align 8
  %112 = call i32 @Com_Printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i8* %111)
  %113 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  store %struct.TYPE_7__* %113, %struct.TYPE_7__** %4, align 8
  br label %257

114:                                              ; preds = %103
  %115 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %116 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %115, i32 0, i32 1
  %117 = load i32, i32* %116, align 8
  %118 = load i32, i32* @CVAR_INIT, align 4
  %119 = and i32 %117, %118
  %120 = icmp ne i32 %119, 0
  br i1 %120, label %121, label %125

121:                                              ; preds = %114
  %122 = load i8*, i8** %5, align 8
  %123 = call i32 @Com_Printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.3, i64 0, i64 0), i8* %122)
  %124 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  store %struct.TYPE_7__* %124, %struct.TYPE_7__** %4, align 8
  br label %257

125:                                              ; preds = %114
  %126 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %127 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %126, i32 0, i32 1
  %128 = load i32, i32* %127, align 8
  %129 = load i32, i32* @CVAR_CHEAT, align 4
  %130 = and i32 %128, %129
  %131 = icmp ne i32 %130, 0
  br i1 %131, label %132, label %141

132:                                              ; preds = %125
  %133 = load %struct.TYPE_8__*, %struct.TYPE_8__** @cvar_cheats, align 8
  %134 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %133, i32 0, i32 0
  %135 = load i32, i32* %134, align 4
  %136 = icmp ne i32 %135, 0
  br i1 %136, label %141, label %137

137:                                              ; preds = %132
  %138 = load i8*, i8** %5, align 8
  %139 = call i32 @Com_Printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.4, i64 0, i64 0), i8* %138)
  %140 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  store %struct.TYPE_7__* %140, %struct.TYPE_7__** %4, align 8
  br label %257

141:                                              ; preds = %132, %125
  %142 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %143 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %142, i32 0, i32 1
  %144 = load i32, i32* %143, align 8
  %145 = load i32, i32* @CVAR_LATCH, align 4
  %146 = and i32 %144, %145
  %147 = icmp ne i32 %146, 0
  br i1 %147, label %148, label %193

148:                                              ; preds = %141
  %149 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %150 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %149, i32 0, i32 7
  %151 = load i32*, i32** %150, align 8
  %152 = icmp ne i32* %151, null
  br i1 %152, label %153, label %167

153:                                              ; preds = %148
  %154 = load i8*, i8** %6, align 8
  %155 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %156 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %155, i32 0, i32 7
  %157 = load i32*, i32** %156, align 8
  %158 = call i64 @strcmp(i8* %154, i32* %157)
  %159 = icmp eq i64 %158, 0
  br i1 %159, label %160, label %162

160:                                              ; preds = %153
  %161 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  store %struct.TYPE_7__* %161, %struct.TYPE_7__** %4, align 8
  br label %257

162:                                              ; preds = %153
  %163 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %164 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %163, i32 0, i32 7
  %165 = load i32*, i32** %164, align 8
  %166 = call i32 @Z_Free(i32* %165)
  br label %177

167:                                              ; preds = %148
  %168 = load i8*, i8** %6, align 8
  %169 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %170 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %169, i32 0, i32 3
  %171 = load i32*, i32** %170, align 8
  %172 = call i64 @strcmp(i8* %168, i32* %171)
  %173 = icmp eq i64 %172, 0
  br i1 %173, label %174, label %176

174:                                              ; preds = %167
  %175 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  store %struct.TYPE_7__* %175, %struct.TYPE_7__** %4, align 8
  br label %257

176:                                              ; preds = %167
  br label %177

177:                                              ; preds = %176, %162
  %178 = load i8*, i8** %5, align 8
  %179 = call i32 @Com_Printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.5, i64 0, i64 0), i8* %178)
  %180 = load i8*, i8** %6, align 8
  %181 = call i8* @CopyString(i8* %180)
  %182 = bitcast i8* %181 to i32*
  %183 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %184 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %183, i32 0, i32 7
  store i32* %182, i32** %184, align 8
  %185 = load i8*, i8** @qtrue, align 8
  %186 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %187 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %186, i32 0, i32 6
  store i8* %185, i8** %187, align 8
  %188 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %189 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %188, i32 0, i32 5
  %190 = load i32, i32* %189, align 4
  %191 = add nsw i32 %190, 1
  store i32 %191, i32* %189, align 4
  %192 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  store %struct.TYPE_7__* %192, %struct.TYPE_7__** %4, align 8
  br label %257

193:                                              ; preds = %141
  br label %207

194:                                              ; preds = %95
  %195 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %196 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %195, i32 0, i32 7
  %197 = load i32*, i32** %196, align 8
  %198 = icmp ne i32* %197, null
  br i1 %198, label %199, label %206

199:                                              ; preds = %194
  %200 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %201 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %200, i32 0, i32 7
  %202 = load i32*, i32** %201, align 8
  %203 = call i32 @Z_Free(i32* %202)
  %204 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %205 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %204, i32 0, i32 7
  store i32* null, i32** %205, align 8
  br label %206

206:                                              ; preds = %199, %194
  br label %207

207:                                              ; preds = %206, %193
  %208 = load i8*, i8** %6, align 8
  %209 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %210 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %209, i32 0, i32 3
  %211 = load i32*, i32** %210, align 8
  %212 = call i64 @strcmp(i8* %208, i32* %211)
  %213 = icmp ne i64 %212, 0
  br i1 %213, label %216, label %214

214:                                              ; preds = %207
  %215 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  store %struct.TYPE_7__* %215, %struct.TYPE_7__** %4, align 8
  br label %257

216:                                              ; preds = %207
  %217 = load i8*, i8** @qtrue, align 8
  %218 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %219 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %218, i32 0, i32 6
  store i8* %217, i8** %219, align 8
  %220 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %221 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %220, i32 0, i32 5
  %222 = load i32, i32* %221, align 4
  %223 = add nsw i32 %222, 1
  store i32 %223, i32* %221, align 4
  %224 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %225 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %224, i32 0, i32 3
  %226 = load i32*, i32** %225, align 8
  %227 = call i32 @Z_Free(i32* %226)
  %228 = load i8*, i8** %6, align 8
  %229 = call i8* @CopyString(i8* %228)
  %230 = bitcast i8* %229 to i32*
  %231 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %232 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %231, i32 0, i32 3
  store i32* %230, i32** %232, align 8
  %233 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %234 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %233, i32 0, i32 3
  %235 = load i32*, i32** %234, align 8
  %236 = call double @atof(i32* %235)
  store double %236, double* %9, align 8
  %237 = load double, double* @FLT_MAX, align 8
  %238 = fneg double %237
  %239 = load double, double* %9, align 8
  %240 = fcmp ole double %238, %239
  br i1 %240, label %241, label %249

241:                                              ; preds = %216
  %242 = load double, double* %9, align 8
  %243 = load double, double* @FLT_MAX, align 8
  %244 = fcmp ole double %242, %243
  br i1 %244, label %245, label %249

245:                                              ; preds = %241
  %246 = load double, double* %9, align 8
  %247 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %248 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %247, i32 0, i32 2
  store double %246, double* %248, align 8
  br label %249

249:                                              ; preds = %245, %241, %216
  %250 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %251 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %250, i32 0, i32 3
  %252 = load i32*, i32** %251, align 8
  %253 = call i32 @atoi(i32* %252)
  %254 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %255 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %254, i32 0, i32 4
  store i32 %253, i32* %255, align 8
  %256 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  store %struct.TYPE_7__* %256, %struct.TYPE_7__** %4, align 8
  br label %257

257:                                              ; preds = %249, %214, %177, %174, %160, %137, %121, %110, %92, %82, %67, %33, %28, %24
  %258 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  ret %struct.TYPE_7__* %258
}

declare dso_local i32 @Cvar_ValidateString(i8*) #1

declare dso_local i32 @Com_Printf(i8*, i8*) #1

declare dso_local %struct.TYPE_7__* @Cvar_FindVar(i8*) #1

declare dso_local %struct.TYPE_7__* @Cvar_Get(i8*, i8*, i32) #1

declare dso_local i8* @Cvar_Validate(%struct.TYPE_7__*, i8*, i8*) #1

declare dso_local i64 @strcmp(i8*, i32*) #1

declare dso_local i32 @Z_Free(i32*) #1

declare dso_local i8* @CopyString(i8*) #1

declare dso_local double @atof(i32*) #1

declare dso_local i32 @atoi(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
